// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Chaining form with css 1`] = `
Object {
  "map": undefined,
  "name": "w7vlh",
  "next": undefined,
  "styles": "
        width: 100%;
      @media(min-width:20rem){
        width: 18rem;
      }",
}
`;

exports[`Chaining form with plain object 1`] = `
Object {
  "map": undefined,
  "name": "v5szp2",
  "next": undefined,
  "styles": "width:100%;@media(min-width:20rem){width:18rem;}",
}
`;

exports[`Compact form with plain object 1`] = `
Object {
  "map": undefined,
  "name": "1mcmhjb",
  "next": undefined,
  "styles": "width:100%;background:red;@media(min-width:20rem){width:18rem;}@media(min-width:28rem){width:24rem;background:blue;}@media(min-width:36rem){width:32rem;}@media(min-width:48rem){width:44rem;}@media(min-width:60rem){width:54rem;background:green;}@media(min-width:75rem){width:72rem;}",
}
`;

exports[`Misc usage with customized min-height 1`] = `
Object {
  "map": undefined,
  "name": "1i86alf",
  "next": undefined,
  "styles": "@media(min-height:640px){width:100%;}",
}
`;

exports[`Misc usage with customized min-width 1`] = `
Object {
  "map": undefined,
  "name": "ccf86",
  "next": undefined,
  "styles": "@media(min-width:640px){width:100%;}",
}
`;

exports[`Misc usage with customized unitless min-height 1`] = `
Object {
  "map": undefined,
  "name": "4qmkok",
  "next": undefined,
  "styles": "@media(min-height:40rem){width:100%;}",
}
`;

exports[`Misc usage with customized unitless min-width 1`] = `
Object {
  "map": undefined,
  "name": "sk8x50",
  "next": undefined,
  "styles": "@media(min-width:40rem){width:100%;}",
}
`;

exports[`Single-media form with additional height constraint 1`] = `
Object {
  "map": undefined,
  "name": "ztzb64",
  "next": undefined,
  "styles": "@media(min-width:20rem) and (min-height:640px){width:18px;}",
}
`;

exports[`Single-media form with additional unitless height constraint 1`] = `
Object {
  "map": undefined,
  "name": "1ktezg3",
  "next": undefined,
  "styles": "@media(min-width:20rem) and (min-height:40rem){width:18px;}",
}
`;

exports[`Single-media form with multiple plain objects 1`] = `
Object {
  "map": undefined,
  "name": "18t2b45",
  "next": undefined,
  "styles": "@media(min-width:20rem){width:18px;font-size:16px;}",
}
`;

exports[`Single-media form with multiple plain objects with a mixed of unit mode 1`] = `
Object {
  "map": undefined,
  "name": "199dyzj",
  "next": undefined,
  "styles": "@media(min-width:20rem){width:240px;font-size:16px;}",
}
`;

exports[`Single-media form with multiple plain objects with mixed units 1`] = `
Object {
  "map": undefined,
  "name": "zcnrwc",
  "next": undefined,
  "styles": "@media(min-width:20rem){width:240px;font-size:1rem;}",
}
`;

exports[`Single-media form with tagged template literal 1`] = `
Object {
  "map": undefined,
  "name": "et70wo",
  "next": undefined,
  "styles": "@media(min-width:20rem){width: 18rem;}",
}
`;

exports[`Single-property form with marginHorizontal 1`] = `
Object {
  "map": undefined,
  "name": "1sv7vo6",
  "next": undefined,
  "styles": "margin-left:1rem;margin-right:1rem;@media(min-width:28rem){margin-left:2rem;margin-right:2rem;}@media(min-width:60rem){margin-left:4rem;margin-right:4rem;}",
}
`;

exports[`Single-property form with marginVertical 1`] = `
Object {
  "map": undefined,
  "name": "93qv2k",
  "next": undefined,
  "styles": "margin-top:1rem;margin-bottom:1rem;@media(min-width:28rem){margin-top:2rem;margin-bottom:2rem;}@media(min-width:60rem){margin-top:4rem;margin-bottom:4rem;}",
}
`;

exports[`Single-property form with number of argument fewer than that of breakpoints 1`] = `
Object {
  "map": undefined,
  "name": "1x4cfvp",
  "next": undefined,
  "styles": "width:100%;@media(min-width:20rem){width:18rem;}@media(min-width:28rem){width:24rem;}@media(min-width:36rem){width:32rem;}@media(min-width:48rem){width:44rem;}",
}
`;

exports[`Single-property form with number of argument more than that of breakpoints 1`] = `
Object {
  "map": undefined,
  "name": "1rsqg0i",
  "next": undefined,
  "styles": "width:100%;@media(min-width:20rem){width:18rem;}@media(min-width:28rem){width:24rem;}@media(min-width:36rem){width:32rem;}@media(min-width:48rem){width:44rem;}@media(min-width:60rem){width:54rem;}@media(min-width:75rem){width:72rem;}",
}
`;

exports[`Single-property form with paddingHorizontal 1`] = `
Object {
  "map": undefined,
  "name": "19x4o37",
  "next": undefined,
  "styles": "padding-left:1rem;padding-right:1rem;@media(min-width:28rem){padding-left:2rem;padding-right:2rem;}@media(min-width:60rem){padding-left:4rem;padding-right:4rem;}",
}
`;

exports[`Single-property form with paddingVertical 1`] = `
Object {
  "map": undefined,
  "name": "1jyjxt3",
  "next": undefined,
  "styles": "padding-top:1rem;padding-bottom:1rem;@media(min-width:28rem){padding-top:2rem;padding-bottom:2rem;}@media(min-width:60rem){padding-top:4rem;padding-bottom:4rem;}",
}
`;

exports[`Single-property form with single argument 1`] = `
Object {
  "map": undefined,
  "name": "1lcftrr",
  "next": undefined,
  "styles": "padding-bottom:4rem;",
}
`;

exports[`Single-property form with square 1`] = `
Object {
  "map": undefined,
  "name": "74iqde",
  "next": undefined,
  "styles": "width:1rem;height:1rem;@media(min-width:28rem){width:2rem;height:2rem;}@media(min-width:60rem){width:4rem;height:4rem;}",
}
`;
